# fbhash

./: .gitattributes  .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  SECURITY.md  deny.toml
.github/workflows/: build.yml  rust-clippy.yml  rust.yml
src/: chunker.rs  indexer.rs  main  main.rs  query.rs  similarities.rs
src/fbhash/: chunker.rs  heap.rs  index.rs  mod.rs  query.rs  similarities.rs  utils.rs
tests/: integration.rs
