[package]
name = "fbhash"
version = "0.1.0"
authors = ["Erwin van Eijk <235739+erwinvaneijk@users.noreply.github.com>"]
edition = "2018"
homepage = "https://github.com/erwinvaneijk/fbhash"
repository = "https://github.com/erwinvaneijk/fbhash"
description = "A Similarity Hashing Scheme for Digital Forensics"
readme = "README.md"
keywords = [
    "filesystem",
    "tool",
    "forensics",
]
license = "MIT"
categories = ["command-line-utilities", "filesystem", "science"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[badges.travis-ci]
repository = "erwinvaneijk/fbhash"

[[bin]]
name = "fbhash"
path = "src/main.rs"

[profile.release]
lto = true
overflow-checks = true
codegen-units = 1
panic = "abort"

[dependencies]
env_logger = "0.8.3"
itertools = "0.10.0"
walkdir = "2"
serde_yaml = "0.8.17"
serde_json = "1.0"
bincode = "~1.3.3"
hash_hasher = "2.0"
console = "0.14.1"
rayon = "1.5.0"

[dependencies.chrono]
version = "0.4.19"
features = ["serde"]

[dependencies.clap]
version = "3.2.22"
features = ["suggestions", "color", "wrap_help"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.indicatif]
version = "0.16.0"
features = ["rayon"]

[dependencies.hashbrown]
version = "0.11.2"
features = ["serde", "rayon"]

[dev-dependencies]
pretty_assertions = "1.3.0"
float-cmp = "0.8.0"
serde_test = "1.0"
tempfile = "3"
assert_cmd = "1.0.3"
predicates = "1"
